# testlib

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  testlib.c  testlib.h  testlibConfig-Version.cmake.in  testlibConfig.cmake
lib/cmake/: testlibConfig.cmake.in
